force-app/main/default/objects/Student__c/fields/Aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_number__c</fullName>
    <label>Aadhar number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>