force-app/main/default/objects/Student__c/fields/Fathers_Aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Fathers_Aadhar_number__c</fullName>
    <label>Fathers Aadhar number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>