force-app/main/default/objects/Student__c/fields/Mathematics__c.field-meta.xml
<CustomField>
    <fullName>Mathematics__c</fullName>
    <label>Mathematics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>