force-app/main/default/objects/Student__c/fields/Mothers_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Aadhar_Number__c</fullName>
    <label>Mothers Aadhar Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>