force-app/main/default/objects/Student__c/fields/Total_fee_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_fee_to_be_paid__c</fullName>
    <label>Total fee to be paid</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>