force-app/main/default/objects/Student__c/validationRules/branch_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>branch_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Branch__c  = NULL</errorConditionFormula>
    <errorMessage>Mandatory fields Missing</errorMessage>
</ValidationRule>