force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aadhar_number__c</columns>
    <columns>Branch__c</columns>
    <columns>Fathers_Aadhar_number__c</columns>
    <columns>Mothers_Aadhar_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>